@@ -96,12 +96,6 @@ shadowJar {
   zip64 true
 }
 
-tasks.withType(JavaExec) {
-  jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
-  jvmArgs '--add-opens', 'java.base/java.nio=ALL-UNNAMED'
-  jvmArgs '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED'
-}
-
 build.dependsOn(shadowJar)
 
 task buildFrontend(type: Exec) {
